<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<TextView
  	android:text="@string/curso_modalidad_label"
  	style="?View"
  	/>
<Spinner
   	android:id="@+id/modalidadSpinner"
  	style="?View"
  	/>
<TextView
  	android:text="@string/curso_ciclo_label"
  	style="?View"
  	/>
<Spinner
   	android:id="@+id/cicloSpinner"
  	style="?View"
  	/>   	
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
    	android:id="@+id/siguienteButton" 
    	android:text="@string/siguiente_label"
        style="?View"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
    	/>    
</RelativeLayout>
</LinearLayout>
